[package]
name = "brushless"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
# Needed for no_std floating point operations
libm = "0.2.1"

[dev-dependencies]
# Implementation of `log` facade
env_logger = "0.9.0"